Claim Customer Errors
troubleshooting.

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -59,7 +59,7 @@
         <div class="col-md-4">
           <div class="profile-work">
             <p>Links</p>
-            <button (click)="claimCustomer(customerId)">
+            <button (click)="claimCustomer()">
              Claim Customer</button
             ><br />
             <!-- @if(showAssignAgent){
