corrected customer-detail
changed spelling of some items i changed to match backend

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -129,7 +129,7 @@
                   <label>Policy Expiration:</label>
                 </div>
                 <div class="col-md-6">
-                  <p>{{ selectedCustomer?.policy?.expDate }}</p>
+                  <p>{{ selectedCustomer?.policy?.exp_date }}</p>
                 </div>
               </div>
               <div class="row">
