--- a/src/app/features/policy/create-policy/create-policy.component.html
+++ b/src/app/features/policy/create-policy/create-policy.component.html
@@ -104,7 +104,7 @@
                   <div class="input-box">
                     <i class="fas fa-user"></i>
                     <input
-                      type="text"
+                      type="number"
                       placeholder="Insurance Company ID"
                       formControlName="insurance_company_id"
                     />
@@ -114,7 +114,7 @@
                         policyForm.get('policy.insurance_company_id')?.touched
                       "
                       class="help-block"
-                      >Enter Company ID</span
+                      >Enter Company ID#</span
                     >
                   </div>
                 </div>
