--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -65,8 +65,8 @@
             <!-- @if(showAssignAgent){
             <app-agent-assignment></app-agent-assignment>
             } -->
-<a routerLink='create-policy'>
-            <button >Add Policy</button></a><br />
+
+            <button ><a routerLink='create-policy' >Add Policy</a></button><br />
             <button href="CHANGE">View Policy</button><br />
             <button>Notes</button><br />
             <br />
