--- a/src/styles.css
+++ b/src/styles.css
@@ -282,3 +282,6 @@ input{
     display: none;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
