--- a/src/app/features/policy/create-policy/create-policy.component.html
+++ b/src/app/features/policy/create-policy/create-policy.component.html
@@ -52,11 +52,15 @@
                   </div>
                   <div class="input-box">
                     <i class="fas fa-user"></i>
-                    <input
-                      type="text"
-                      placeholder="Enter Expiration Date"
-                      formControlName="expDate"
-                    />
+                    <mat-form-field>
+                      <input matInput [matDatepicker]="picker" placeholder="Enter Expiration Date" formControlName="expDate">
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                    <span *ngIf="!policyForm.get('policy.expDate')?.valid && policyForm.get('policy.expDate')?.touched"
+                          class="help-block">Enter an Expiration Date</span>
+                  </div>
+
                     <span
                       *ngIf="
                         !policyForm.get('policy.expDate')?.valid &&
@@ -104,7 +108,7 @@
                   <div class="input-box">
                     <i class="fas fa-user"></i>
                     <input
-                      type="number"
+                      type="text"
                       placeholder="Insurance Company ID"
                       formControlName="insurance_company_id"
                     />
@@ -118,7 +122,7 @@
                     >
                   </div>
                 </div>
-              </div>
+           
 
               @if (policyForm.valid) {
               <div class="button input-box">
