--- a/src/app/features/policy/create-policy/create-policy.component.html
+++ b/src/app/features/policy/create-policy/create-policy.component.html
@@ -15,7 +15,6 @@
           </div>
         </div>
         <div class="back">
-          <img class="backImg" src="images/backImg.jpg" alt="" />
           <div class="text">
             <span class="text-1"
               >Complete miles of journey<br />with one step</span
@@ -28,10 +27,9 @@
         <div class="form-content">
           <div class="signup-form">
             <div class="title">Add Policy</div>
-
             <form [formGroup]="policyForm" (ngSubmit)="onAddPolicy()">
               <div class="input-boxes">
-                <div class="policy-info" formGroupName="policy">
+                <div class="policy-info">
                   <div class="input-box">
                     <i class="fas fa-user"></i>
                     <select formControlName="policy_type" class="type-select">
@@ -43,8 +41,8 @@
                     </select>
                     <span
                       *ngIf="
-                        !policyForm.get('policy.policy_type')?.valid &&
-                        policyForm.get('policy.policy_type')?.touched
+                        policyForm.get('policy_type')?.errors&&
+                        policyForm.get('policy_type')?.touched
                       "
                       class="help-block"
                       >Select a type</span
@@ -52,19 +50,15 @@
                   </div>
                   <div class="input-box">
                     <i class="fas fa-user"></i>
-                    <mat-form-field>
-                      <input matInput [matDatepicker]="picker" placeholder="Enter Expiration Date" formControlName="expDate">
-                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-                    <span *ngIf="!policyForm.get('policy.expDate')?.valid && policyForm.get('policy.expDate')?.touched"
-                          class="help-block">Enter an Expiration Date</span>
-                  </div>
-
+                    <input
+                      type="text"
+                      placeholder="Enter Expiration Date"
+                      formControlName="exp_date"
+                    />
                     <span
                       *ngIf="
-                        !policyForm.get('policy.expDate')?.valid &&
-                        policyForm.get('policy.expDate')?.touched
+                        policyForm.get('exp_date')?.errors&&
+                        policyForm.get('exp_date')?.touched
                       "
                       class="help-block"
                       >Enter an Expiration Date</span
@@ -75,31 +69,29 @@
                     <input
                       type="text"
                       placeholder="Term length in months"
-                      formControlName="termLength"
+                      formControlName="term_length"
                     />
                     <span
                       *ngIf="
-                        !policyForm.get('policy.termLength')?.value &&
-                        policyForm.get('policy.termLength')?.touched &&
-                        policyForm.get('policy.termLength')?.pristine
+                        policyForm.get('term_length')?.errors&&
+                        policyForm.get('term_length')?.touched &&
+                        policyForm.get('term_length')?.pristine
                       "
                       class="help-block"
                       >Enter Term Length</span
                     >
-
                   </div>
-
                   <div class="input-box">
                     <i class="fas fa-user"></i>
                     <input
                       type="text"
                       placeholder="Enter Premium Amount"
-                      formControlName="premiumAmount"
+                      formControlName="premium_amount"
                     />
                     <span
                       *ngIf="
-                        !policyForm.get('policy.premiumAmount')?.valid &&
-                        policyForm.get('policy.premiumAmount')?.touched
+                        policyForm.get('premium_amount')?.errors&&
+                        policyForm.get('premium_amount')?.touched
                       "
                       class="help-block"
                       >Enter Premium Amount</span
@@ -114,17 +106,15 @@
                     />
                     <span
                       *ngIf="
-                        !policyForm.get('policy.insurance_company_id')?.valid &&
-                        policyForm.get('policy.insurance_company_id')?.touched
+                        policyForm.get('insurance_company_id')?.errors&&
+                        policyForm.get('insurance_company_id')?.touched
                       "
                       class="help-block"
-                      >Enter Company ID#</span
+                      >Enter Company ID</span
                     >
                   </div>
                 </div>
-           
-
-              @if (policyForm.valid) {
+              </div>
               <div class="button input-box">
                 <input
                   [disabled]="!policyForm.valid"
@@ -132,7 +122,6 @@
                   value="Submit"
                 />
               </div>
-              }
             </form>
           </div>
         </div>
