Create Policy Troubleshooting

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -66,7 +66,7 @@
             <app-agent-assignment></app-agent-assignment>
             } -->
 
-            <button ><a routerLink='create-policy' >Add Policy</a></button><br />
+            <button (click)="openAddPolicy()">Add Policy</button><br />
             <button href="CHANGE">View Policy</button><br />
             <button>Notes</button><br />
             <br />
