Navigate to new policy

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -67,7 +67,7 @@
             } -->
 
             <button (click)="openAddPolicy()">Add Policy</button><br />
-            <button href="CHANGE">View Policy</button><br />
+            <button (click)="onViewPolicy()">View Policy</button><br />
             <button>Notes</button><br />
             <br />
             <br />
