success alerts for policy creation and agent assignment

--- a/src/app/features/customer/customer-details/customer-details.component.css
+++ b/src/app/features/customer/customer-details/customer-details.component.css
@@ -1,6 +1,9 @@
 .body {
   background: -webkit-linear-gradient(left, #4c3bec, #fdfdfd);
 }
+.purple-close-button {
+  color: purple;
+}
 
 button {
   margin-bottom: 4px;
