Working On Your Customers

--- a/src/app/features/customer/your-customers/your-customers.component.html
+++ b/src/app/features/customer/your-customers/your-customers.component.html
@@ -1,1 +1,80 @@
-<p>your-customers works!</p>
+<link
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  rel="stylesheet"
+/>
+<body>
+  <div class="body">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 mb-3 mb-lg-5">
+          <div class="overflow-hidden card table-nowrap table-card">
+            <div
+              class="card-header d-flex justify-content-between align-items-center customer-container"
+            >
+              <h5 class="mb-0">All Customers</h5>
+              <a href="#!" class="btn btn-light btn-sm">View All</a>
+            </div>
+            <div class="table-responsive">
+              <table class="table mb-0">
+                <thead
+                  class="small text-uppercase bg-body text-muted table-head"
+                >
+                  <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Phone</th>
+                    <th>Email</th>
+                    <th>Agent</th>
+                    <th>Pol Exp</th>
+                    <th class="text-end">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="align-middle" *ngFor="let customer of customers">
+                    <td>
+                      <span>
+                        {{ customer.first_name }}
+                      </span>
+                    </td>
+                    <td>
+                      <span>{{ customer.last_name }}</span>
+                    </td>
+                    <td>
+                      <span>{{ customer.phone }}</span>
+                    </td>
+                    <td>
+                      <span>{{ customer.email }}</span>
+                    </td>
+                    <td>
+                      <span>{{ customer.agent_id }}</span>
+                    </td>
+                    <td><span>Get Policy Link</span></td>
+                    <td class="text-end">
+                      <a
+                        data-bs-toggle="dropdown"
+                        class="btn p-1"
+                        aria-expanded="false"
+                      >
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                      </a>
+                      <div class="dropdown-menu dropdown-menu-end">
+                        <a
+                          (click)="navigateToCustomerDetails(customer.id)"
+                          routerLinkActive="router-link-active"
+                          class="dropdown-item"
+                          >View Details</a
+                        >
+                        <!-- <a href="#!" class="dropdown-item">Assign Agent</a> -->
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
