--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <a href="#0">Customers</a>
         <ul>
           <li><a routerLink="/add-customer">Add Customer</a></li>
-          <li><a >Your Customers</a></li>
+          <li><a routerLink="/your-customers" >Your Customers</a></li>
           <li><a >Available Customers</a></li>
           <li><a routerLink="/customers">All Customers</a></li>
           <!-- <li><a href="#0">PH</a></li> -->
