agent name wont load for customer details
need to send the whole agent object with customer?

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -142,7 +142,7 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <label>Agent #:</label>
+                  <label>Agent:</label>
                 </div>
                 <div class="col-md-6">
                   <p>{{ selectedCustomer?.agent_id }}</p>
