--- a/src/app/features/customer/your-customers/your-customers.component.html
+++ b/src/app/features/customer/your-customers/your-customers.component.html
@@ -11,7 +11,7 @@
             <div
               class="card-header d-flex justify-content-between align-items-center customer-container"
             >
-              <h5 class="mb-0">All Customers</h5>
+              <h5 class="mb-0">Your Customers</h5>
               <a href="#!" class="btn btn-light btn-sm">View All</a>
             </div>
             <div class="table-responsive">
