--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,14 @@
 /* You can add global styles to this file, and also import other style files
 /* Google Font Link */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
-
 }
 /* .body{background: -webkit-linear-gradient(left, #4c3bec, #fdfdfd);} */
-
-
 
 .input-container {
   display: flex;
@@ -26,39 +23,35 @@
   color: rgb(240, 17, 17);
   font-size: 12px;
 }
-.error-message{
+.error-message {
   color: red;
   font-size: 12px;
 }
 
-
-.body{
+.body {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4c3bec;
+
+  background: -webkit-linear-gradient(left, #4c3bec, #fdfdfd);
+
   padding: 30px;
-
-
-  }
-.container{
+}
+.container {
   border-radius: 15px;
   position: relative;
   max-width: 850px;
   width: 100%;
   background: #fff;
   padding: 20px 50px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   perspective: 2700px;
-
-
 }
-input{
+input {
   margin-top: 5px;
 }
-.container .cover{
-
+.container .cover {
   position: absolute;
   top: 0;
   left: 50%;
@@ -70,34 +63,31 @@ input{
   transform-style: preserve-3d;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-
 }
-.container #flip:checked ~ .cover{
+.container #flip:checked ~ .cover {
   transform: rotateY(-180deg);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
- }
- .container .cover .front,
- .container .cover .back{
+}
+.container .cover .front,
+.container .cover .back {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-   border-top-right-radius: 15px;
+  border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-
- }
- .cover .back{
+}
+.cover .back {
   transform: rotateY(180deg);
   backface-visibility: hidden;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-
 }
 .container .cover::before,
-.container .cover::after{
-  content: '';
+.container .cover::after {
+  content: "";
   position: absolute;
   height: 100%;
   width: 100%;
@@ -106,21 +96,16 @@ input{
   z-index: 12;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-
-
 }
 
-
-.container .cover::after{
+.container .cover::after {
   opacity: 0.3;
   transform: rotateY(180deg);
   backface-visibility: hidden;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-
-
 }
-.container .cover img{
+.container .cover img {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -128,9 +113,8 @@ input{
   z-index: 10;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-
 }
-.container .cover .text{
+.container .cover .text {
   position: absolute;
   z-index: 130;
   height: 100%;
@@ -141,46 +125,41 @@ input{
   justify-content: center;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
-
-
-
 }
 .cover .text .text-1,
-.cover .text .text-2{
+.cover .text .text-2 {
   font-size: 26px;
   font-weight: 600;
   color: #fff;
   text-align: center;
 }
-.cover .text .text-2{
+.cover .text .text-2 {
   font-size: 15px;
   font-weight: 500;
 }
-.container .forms{
+.container .forms {
   height: 100%;
   width: 100%;
   background: #fff;
-
 }
-.container .form-content{
+.container .form-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .form-content .login-form,
-.form-content .signup-form{
+.form-content .signup-form {
   width: calc(100% / 2 - 25px);
-
 }
-.forms .form-content .title{
+.forms .form-content .title {
   position: relative;
   font-size: 24px;
   font-weight: 500;
   color: #333;
 }
-.forms .form-content .title:before{
-  content: '';
+.forms .form-content .title:before {
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -188,13 +167,13 @@ input{
   width: 25px;
   background: #7d2ae8;
 }
-.forms .signup-form  .title:before{
+.forms .signup-form .title:before {
   width: 20px;
 }
-.forms .form-content .input-boxes{
+.forms .form-content .input-boxes {
   margin-top: 30px;
 }
-.forms .form-content .input-box{
+.forms .form-content .input-box {
   display: flex;
   align-items: center;
   height: 50px;
@@ -202,7 +181,7 @@ input{
   margin: 10px 0;
   position: relative;
 }
-.form-content .input-box input{
+.form-content .input-box input {
   height: 100%;
   width: 100%;
   outline: none;
@@ -210,35 +189,34 @@ input{
   padding: 0 30px;
   font-size: 16px;
   font-weight: 500;
-  border-bottom: 2px solid rgba(0,0,0,0.2);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
-
 }
 .form-content .input-box input:focus,
-.form-content .input-box input:valid{
+.form-content .input-box input:valid {
   border-color: #7d2ae8;
 }
-.form-content .input-box i{
+.form-content .input-box i {
   position: absolute;
   color: #7d2ae8;
   font-size: 17px;
 }
-.forms .form-content .text{
+.forms .form-content .text {
   font-size: 14px;
   font-weight: 500;
   color: #333;
 }
-.forms .form-content .text a{
+.forms .form-content .text a {
   text-decoration: none;
 }
-.forms .form-content .text a:hover{
+.forms .form-content .text a:hover {
   text-decoration: underline;
 }
-.forms .form-content .button{
+.forms .form-content .button {
   color: #fff;
   margin-top: 40px;
 }
-.forms .form-content .button input{
+.forms .form-content .button input {
   color: #fff;
   background: #7d2ae8;
   border-radius: 6px;
@@ -246,42 +224,48 @@ input{
   cursor: pointer;
   transition: all 0.4s ease;
 }
-.forms .form-content .button input:hover{
+.forms .form-content .button input:hover {
   background: #5b13b9;
 }
-.forms .form-content label{
+.forms .form-content label {
   color: #5b13b9;
   cursor: pointer;
 }
-.forms .form-content label:hover{
+.forms .form-content label:hover {
   text-decoration: underline;
 }
 .forms .form-content .login-text,
-.forms .form-content .sign-up-text{
+.forms .form-content .sign-up-text {
   text-align: center;
   margin-top: 25px;
 }
-.container #flip{
+.container #flip {
   display: none;
 }
 @media (max-width: 730px) {
-  .container .cover{
+  .container .cover {
     display: none;
   }
   .form-content .login-form,
-  .form-content .signup-form{
+  .form-content .signup-form {
     width: 100%;
   }
-  .form-content .signup-form{
+  .form-content .signup-form {
     display: none;
   }
-  .container #flip:checked ~ .forms .signup-form{
+  .container #flip:checked ~ .forms .signup-form {
     display: block;
   }
-  .container #flip:checked ~ .forms .login-form{
+  .container #flip:checked ~ .forms .login-form {
     display: none;
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
