Adding welcome to dashboard/your customers to dashboard

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,7 +1,4 @@
-<div class="body">@if(currentUser){<div class="body">
-  <p>{{currentUser}}</p>
-
-</div>}</div>
+<app-your-customers></app-your-customers>
 
 
 
