--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         </ul>
       </li>}
 
-@if(isAuthenticated){<li>
+@if(!isAuthenticated){<li>
   <a> Welcome, {{user?.agent?.first_name}}</a>
 </li>
 
