--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -13,7 +13,8 @@
             alt=""
           />
           <div class="text">
-            <span class="text-1">Helping Agents<br />Help Customers</span>
+            <span class="text-1">Helping Agents</span><br>
+            <span class="text-1">Help Customers</span><br>
             <span class="text-2">Login</span>
           </div>
         </div>
