--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -10,12 +10,13 @@
         <div class="front">
           <img src="\assets\photos\Signup.jpg" alt="Signup Art" />
           <div class="text">
-            <span class="text-1">Helping Agents<br />Help Customers</span>
-            <span class="text-2">Join us</span>
+            <span class="text-1">Helping Agents</span><br>
+            <span class="text-1">Help Customers</span><br>
+            <span class="text-2">Join Us!</span>
           </div>
         </div>
         <div class="back">
-          <img class="backImg" src="images/backImg.jpg" alt="" />
+
           <div class="text">
             <span class="text-1"
               >Complete miles of journey<br />with one step</span
@@ -236,7 +237,7 @@
                   >Login now</label
                 >
               </div>
-              
+
             </form>
           </div>
         </div>
