--- a/src/app/features/auth/sign-up/sign-up.component.css
+++ b/src/app/features/auth/sign-up/sign-up.component.css
@@ -20,7 +20,7 @@ select {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #4c3bec;
+  background: -webkit-linear-gradient(left, #4c3bec, #fdfdfd);
   padding: 130px;
 }
 .container {
@@ -121,7 +121,7 @@ input {
   text-align: center;
 }
 .cover .text .text-2 {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 500;
 }
 .container .forms {
