--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@
   max-width: 850px;
   width: 100%;
   background: #fff;
-  padding: 20px 50px;
+  padding: 65px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   perspective: 2700px;
 }
