last minute fixes cleanup

--- a/src/app/features/address/address.component.html
+++ b/src/app/features/address/address.component.html
@@ -1,15 +1,16 @@
-
+<!--
 <link
   href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
   rel="stylesheet"
   id="bootstrap-css"
 />
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 <!------ Include the above in your HEAD tag ---------->
 <div class="body">
   <div class="container emp-profile">
-    <form method="post">
+    <h2>Address works</h2>
+    <!-- <form method="post">
       <div class="row">
         <div class="col-md-4">
           <div class="agent-img">
@@ -40,10 +41,10 @@
                   >Address Details</a
                 >
               </li>
-              <!-- <li class="nav-item">
+               <li class="nav-item">
                                     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Timeline</a>
                                 </li> -->
-            </ul>
+            <!-- </ul>
           </div>
         </div>
         <div class="col-md-2">
@@ -100,7 +101,7 @@
                 <div class="col-md-6">
                   <p></p>
                 </div>
-              </div>
+              </div> -->
               <!-- <div class="row">
                                             <div class="col-md-6">
                                                 <label></label>
@@ -109,14 +110,14 @@
                                                 <p>{{selectedAgent?.first_name}}</p>
                                             </div> -->
               <!-- </div> -->
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-6">
                   <label>State:</label>
                 </div>
                 <div class="col-md-6">
                   <p></p>
                 </div>
-              </div>
+              </div> -->
 
               <!-- <div class="row">
                                             <div class="col-md-6">
@@ -126,7 +127,7 @@
                                                 <p></p>
                                             </div> -->
               <!-- </div> -->
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-6">
                   <label>Zip:</label>
                 </div>
@@ -140,8 +141,8 @@
               id="profile"
               role="tabpanel"
               aria-labelledby="profile-tab"
-            >
-              <div class="row">
+            > -->
+              <!-- <div class="row">
                 <div class="col-md-6">
                   <label>Experience</label>
                 </div>
@@ -191,6 +192,6 @@
           </div>
         </div>
       </div>
-    </form>
+    </form> -->
   </div>
 </div>
