--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -137,7 +137,7 @@
                   <label>Address:</label>
                 </div>
                 <div class="col-md-6">
-                  <p><a href="chage to /address">View Address</a><br /></p>
+                  <p><a routerLink="/customers/:id/address">View Address</a><br /></p>
                 </div>
               </div>
               <div class="row">
