--- a/src/app/features/address/address.component.css
+++ b/src/app/features/address/address.component.css
@@ -95,3 +95,15 @@ body{
   font-weight: 600;
   color: #0062cc;
 }
+h2{
+
+
+   margin:0;
+   position: relative;
+   top: 50%;
+   -ms-transform: translateY(-50%);
+   transform: translateY(-50%);
+   left: 50%;
+
+
+}
