--- a/src/app/agent/agent-assignment/agent-assignment.component.html
+++ b/src/app/agent/agent-assignment/agent-assignment.component.html
@@ -22,7 +22,8 @@
       ></label>
       <h2 id="dlg-header">Are you sure?</h2>
       <div id="dlg-content">
-       Please confirm that you would like to use a credit to select this customer
+        Please confirm that you would like to use a credit to select this
+        customer
       </div>
       <div id="dlg-prompt">
         <div class="button positive">
@@ -45,5 +46,4 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <script src="js/index.js"></script>
-
 </div>
