--- a/src/app/agent/agent-assignment/agent-assignment.component.css
+++ b/src/app/agent/agent-assignment/agent-assignment.component.css
@@ -1,4 +1,3 @@
-
 #dialog {
   position: absolute;
   z-index: 9999;
@@ -7,8 +6,8 @@
   width: 100%;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.15);
-  transition: visibility 0s linear 0.5s,opacity 0.5s linear;
+  background: rgba(0, 0, 0, 0.15);
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
   opacity: 0;
   visibility: hidden;
 }
@@ -19,7 +18,7 @@
 }
 .dialog_state:checked + #dialog,
 #dialog.dialog_open {
-  transition-delay:0s;
+  transition-delay: 0s;
   opacity: 1;
   visibility: visible;
 }
@@ -50,13 +49,13 @@
   border-radius: 0.25rem;
   /*border: 1px solid #969696;*/
   background: #fff;
-  box-shadow: 1px 1px 6px rgba(0,0,0,0.3);
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.3);
   max-height: 0;
   opacity: 0;
   padding-top: 0;
   padding-bottom: 0;
   overflow: hidden;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 #dlg-close {
   position: absolute;
@@ -84,8 +83,6 @@ h2#dlg-header {
   border-radius: 1.5rem;
 }
 
-
-
 .main_area {
   transition: all 0.5s ease-out;
 }
@@ -94,7 +91,8 @@ h2#dlg-header {
   filter: blur(6px);
 }
 
-.button, a.button {
+.button,
+a.button {
   display: inline-block;
   padding: 0.25em 1em;
   box-sizing: border-box;
@@ -110,23 +108,26 @@ h2#dlg-header {
   border-radius: 4px;
   border: 1px solid #e0e0e0;
 
-  transition: .1s all;
+  transition: 0.1s all;
   cursor: pointer;
 }
-.button:hover, a.button:hover {
+.button:hover,
+a.button:hover {
   color: #a0a0a0;
   background: #f8f8f8;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   /*transform: scale(1.01);*/
 }
-.button.positive, a.button.positive {
-  border-color: #6199B7;
-  color: #6199B7;
+.button.positive,
+a.button.positive {
+  border-color: #6199b7;
+  color: #6199b7;
 }
-.button.positive:hover, a.button.positive:hover {
-  border-color: #468FB6;
+.button.positive:hover,
+a.button.positive:hover {
+  border-color: #468fb6;
   color: #fff;
-  background-color: #468FB6;
+  background-color: #468fb6;
 }
 
 .icon {
@@ -146,7 +147,8 @@ body {
   width: 100%;
   box-sizing: border-box;
   overflow: hidden;
-  background: url("https://farm6.staticflickr.com/5688/21515632899_94e4ddb78a_o.jpg") no-repeat center center;
+  background: url("https://farm6.staticflickr.com/5688/21515632899_94e4ddb78a_o.jpg")
+    no-repeat center center;
   background-size: cover;
 }
 #main .center {
@@ -164,9 +166,8 @@ h1 {
 h2 {
   font: 800 2em/1em Raleway, Open Sans, Arial, Sans-Serif;
   text-transform: uppercase;
-  letter-spacing: 0.0em;
+  letter-spacing: 0em;
   margin: 2rem 0 0.5rem;
 }
-
 
 /* Console */
