--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,31 +1,26 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); */
 
-
 body {
-  font-family: "Poppins" , sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #ffffff;
-
 }
 
 nav {
   background-color: white;
   position: fixed;
-  top:5px;
-left:50%;
+  top: 5px;
+  left: 50%;
   transform: translateX(-50%);
   display: inline-block;
-  border: 2px solid #EBECF1;
+  border: 2px solid #ebecf1;
 
   animation: slide-in 1s ease-out;
   width: 100%;
   z-index: 1000;
   cursor: pointer;
-
-
 }
 
 ul {
-
   justify-content: space-between;
   position: relative;
   display: flex;
@@ -38,7 +33,7 @@ ul {
   }
   li {
     font-weight: 600;
-    font-size:large;
+    font-size: large;
     border: 2px solid transparent;
     border-radius: 5px;
     padding: 15px;
@@ -58,9 +53,9 @@ ul {
       margin: 12px -12px;
       padding: 0;
       background: #7d6bb3;
-      border: 1px solid #F7C833;
-      border-right: 2px solid #F89329;
-      border-bottom: 2px solid #F89329;
+      border: 1px solid #f7c833;
+      border-right: 2px solid #f89329;
+      border-bottom: 2px solid #f89329;
       border-radius: 5px;
       transition: opacity 0.2s, visibility 0.2s;
       li {
@@ -79,15 +74,15 @@ ul {
       border-bottom: 2px solid #692be4;
 
       a {
-        color: #F9F8FD;
+        color: #f9f8fd;
       }
       ul {
         visibility: visible;
         opacity: 1;
-        box-shadow: 0px 3px 5px 2px #EBECF1;
+        box-shadow: 0px 3px 5px 2px #ebecf1;
         li {
           a {
-            color: #F9F8FD;
+            color: #f9f8fd;
           }
         }
       }
@@ -109,12 +104,11 @@ ul {
     top: 15px;
   }
 }
-.auth{
-display: flex;
-justify-content: right;
-
-  }
+.auth {
+  display: flex;
+  justify-content: right;
+}
 
 .customer {
-position:sticky;
+  position: sticky;
 }
