--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,56 +1,50 @@
-
-
-
-  <nav>
-    <ul>
-      <li><a routerLink="/dashboard">Home</a></li>
-      <li><a routerLink="/about-lighthouse">What we do</a></li>
-      @if(isLoggedIn()){  <li>
-        <a class="agentslist" href="#0">Agents</a>
-        <ul>
-          <li *ngFor="let agent of agents">
-            <a (click)="navigateToAgentDetails(agent.id)"
-              >{{ agent.first_name }} {{ agent.last_name }}</a
-            >
-          </li>
-        </ul>
-      </li>}
-      @if(isLoggedIn()){ <li>
-        <a >Customers</a>
-        <ul>
-          <li><a routerLink="/add-customer">Add Customer</a></li>
-          <li><a routerLink="/your-customers" >Your Customers</a></li>
-          <li><a >Available Customers</a></li>
-          <li><a routerLink="/customers">All Customers</a></li>
-          <!-- <li><a href="#0">PH</a></li> -->
-        </ul>
-      </li>}
-
-@if(isLoggedIn()){<li>
-  <a> Welcome </a>
-</li>
-
-}
-
-      <div class="auth">
-        <hr />
-        @if(isLoggedIn()){
-          <li><a (click)="logout()">Logout</a></li>
-          <li routerLink="/account"><a>Account</a></li>
-          }
-        @else {
-        <li><a routerLink="/login">Login</a></li>
-
-        <li>
-          <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active"
-            >Signup</a
+<nav>
+  <ul>
+    <li><a routerLink="/dashboard">Home</a></li>
+    <li><a routerLink="/about-lighthouse">What we do</a></li>
+    @if(isLoggedIn()){
+    <li>
+      <a class="agentslist" href="#0">Agents</a>
+      <ul>
+        <li *ngFor="let agent of agents">
+          <a (click)="navigateToAgentDetails(agent.id)"
+            >{{ agent.first_name }} {{ agent.last_name }}</a
           >
         </li>
-        }
+      </ul>
+    </li>
+    } @if(isLoggedIn()){
+    <li>
+      <a>Customers</a>
+      <ul>
+        <li><a routerLink="/add-customer">Add Customer</a></li>
+        <li><a routerLink="/your-customers">Your Customers</a></li>
+        <li><a>Available Customers</a></li>
+        <li><a routerLink="/customers">All Customers</a></li>
+        <!-- <li><a href="#0">PH</a></li> -->
+      </ul>
+    </li>
+    } @if(isLoggedIn()){
+    <li>
+      <a> Welcome </a>
+    </li>
 
-      </div>
-    </ul>
-  </nav>
+    }
 
+    <div class="auth">
+      <hr />
+      @if(isLoggedIn()){
+      <li><a (click)="logout()">Logout</a></li>
+      <li routerLink="/account"><a>Account</a></li>
+      } @else {
+      <li><a routerLink="/login">Login</a></li>
 
-
+      <li>
+        <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active"
+          >Signup</a
+        >
+      </li>
+      }
+    </div>
+  </ul>
+</nav>
