access agent info for agent details component

--- a/src/app/agent/agent-details/agent-details.component.html
+++ b/src/app/agent/agent-details/agent-details.component.html
@@ -87,10 +87,10 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <label>Email:</label>
+                  <label>NPN:</label>
                 </div>
                 <div class="col-md-6">
-                  <p>{{ selectedAgent?.user?.email}}</p>
+                  <p>{{ selectedAgent?.npn}}</p>
                 </div>
               </div>
               <div class="row">
@@ -98,7 +98,7 @@
                   <label>Phone</label>
                 </div>
                 <div class="col-md-6">
-                  <p>{{ selectedAgent?.updatedAt }}</p>
+                  <p>{{ selectedAgent?.phone }}</p>
                 </div>
               </div>
               <!-- <div class="row">
