Success pulling full associated agent object into customer details

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -145,7 +145,8 @@
                   <label>Agent:</label>
                 </div>
                 <div class="col-md-6">
-                  <p>{{selectedCustomer?.agent_id}}</p>
+                  <p>{{selectedCustomer?.agent?.first_name}} {{selectedCustomer?.agent?.last_name}}</p>
+
                 </div>
               </div>
 
