Moved fileReplacements from dev to production in Angular.json under config

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
     </li>
     } @if(isLoggedIn()){
     <li>
-      <a> Welcome </a>
+      <a> Welcome {{user?.agent?.first_name}} </a>
     </li>
 
     }
